--- a/src/org/unrealscriptsupport/Bundle.properties
+++ b/src/org/unrealscriptsupport/Bundle.properties
@@ -8,3 +8,16 @@ OpenIDE-Module-Short-Description=UnrealScript Language Support
 Services/MIMEResolver/UnrealScriptResolver.xml=UnrealScript Files
 Templates/UnrealScript/UnrealScriptEmptyTemplate.uc=Empty UnrealScript file
 Templates/UnrealScript/UnrealScriptMutatorTemplate.uc=UnrealScript Mutator
+text/x-uc=UnrealScript
+character=Character
+errors=Error
+identifier=Identifier
+keyword=Keyword
+literal=Literal
+comment=Comment
+number=Number
+operator=Operator
+string=String
+separator=Separator
+whitespace=Whitespace
+method-declaration=Method Declaration
