Working on UnrealScript parser.

--- a/src/org/unrealscriptsupport/Bundle.properties
+++ b/src/org/unrealscriptsupport/Bundle.properties
@@ -9,7 +9,7 @@ Services/MIMEResolver/UnrealScriptResolver.xml=UnrealScript Files
 Templates/UnrealScript/UnrealScriptEmptyTemplate.uc=Empty UnrealScript file
 Templates/UnrealScript/UnrealScriptMutatorTemplate.uc=UnrealScript Mutator
 text/x-uc=UnrealScript
-character=Character
+character=Name
 errors=Error
 identifier=Identifier
 keyword=Keyword
