Added project rename, move, copy, delete operations. Added proper icons for project, classes, src folder, important files folder. Build.xml does not do anything yet.

--- a/src/org/unrealscriptsupport/Bundle.properties
+++ b/src/org/unrealscriptsupport/Bundle.properties
@@ -1,8 +1,8 @@
 LBL_UnrealScript_loader_name=UnrealScript Files
 OpenIDE-Module-Display-Category=Languages Support
 OpenIDE-Module-Long-Description=\
-    Syntax highlighting for UnrealScript.\n\
-    Built for the Killing Floor SDK (UT2004).
+    Syntax highlighting for UnrealScript.\
+    <br/>\nBuilt for the Killing Floor SDK (UT2004).
 OpenIDE-Module-Name=UnrealScript Support
 OpenIDE-Module-Short-Description=UnrealScript Language Support
 Services/MIMEResolver/UnrealScriptResolver.xml=UnrealScript Files
