Working on parser. Added support for cpptext blocks.

--- a/src/org/unrealscriptsupport/Bundle.properties
+++ b/src/org/unrealscriptsupport/Bundle.properties
@@ -14,6 +14,7 @@ text/x-uc=UnrealScript
 name=Name
 class=Class
 comment=Comment
+compiler-directive=Compiler Directive
 error=Error
 javadoc-comment=Javadoc Comment
 identifier=Identifier
@@ -24,6 +25,7 @@ local-declaration=Local Variable Declaration
 method-declaration=Method Declaration
 number=Number
 operator=Operator
+preprocessor-directive=Preprocessor Directive
 separator=Separator
 string=String
 whitespace=Whitespace
