Parser passing tests reasonably. Todo: cpptext nested braces.

--- a/src/org/unrealscriptsupport/Bundle.properties
+++ b/src/org/unrealscriptsupport/Bundle.properties
@@ -15,6 +15,7 @@ name=Name
 class=Class
 comment=Comment
 compiler-directive=Compiler Directive
+cpp-code=C++ Code
 error=Error
 javadoc-comment=Javadoc Comment
 identifier=Identifier
