Working on global options panel.

--- a/src/org/unrealscriptsupport/unrealmutatorproject/Bundle.properties
+++ b/src/org/unrealscriptsupport/unrealmutatorproject/Bundle.properties
@@ -3,4 +3,4 @@ BuildJPanel.jLabel1.text=Tool Collection:
 BuildJPanel.jLabel2.text=Copy files to:
 BuildJPanel.jRadioButton1.text=Default Directory
 BuildJPanel.jRadioButton2.text=Other
-BuildJPanel.jLabel4.text=Remember to add to KillingFloor.ini so that ucc make will compile it.
+BuildJPanel.jTextPane1.text=Remember to add the directory name to the engine's .ini file.\nOtherwise ucc make will not be able to compile it.\n\neg.\n...\n[Editor.EditorEngine]\n...\nEditPackages=<Dirname>\nEditPackages=Core\n...
