--- a/src/org/unrealscriptsupport/options/global/Bundle.properties
+++ b/src/org/unrealscriptsupport/options/global/Bundle.properties
@@ -8,13 +8,19 @@ UnrealScriptToolsPanel.jLabel1.text=Tool Collection:
 UnrealScriptToolsPanel.jLabel2.text=Tool Collection:
 UnrealScriptToolsPanel.jPanel3.border.title=Tool Settings
 UnrealScriptToolsPanel.jLabel3.text=Base directory:
-UnrealScriptToolsPanel.jLabel4.text=Compiler path:
+UnrealScriptToolsPanel.jLabel4.text=Compiler file name:
 UnrealScriptToolsPanel.jLabel5.text=Compiler arguments:
 UnrealScriptToolsPanel.jLabel6.text=Result Directory:
-UnrealScriptToolsPanel.compilerBasedirTextField.text=jTextField2
-UnrealScriptToolsPanel.compilerPathTextField.text=jTextField2
-UnrealScriptToolsPanel.compilerArgsTextField.text=jTextField2
-UnrealScriptToolsPanel.resultdirTextField.text=jTextField2
+UnrealScriptToolsPanel.compilerBasedirTextField.text=compilerBasedirTextField
+UnrealScriptToolsPanel.compilerArgsTextField.text=compilerArgsTextField
 UnrealScriptToolsPanel.collectionNameTextField.text=collectionNameTextField
 UnrealScriptToolsPanel.jLabel7.text=Executable path:
-UnrealScriptToolsPanel.executablePathTextField.text=jTextField2
+UnrealScriptToolsPanel.executablePathTextField.text=executablePathTextField
+UnrealScriptToolsPanel.compilerFileNameTextField.text=compilerFileNameTextField
+UnrealScriptToolsPanel.nameErrorLabel.text=Duplicate name in list
+UnrealScriptToolsPanel.nameErrorLabel.AccessibleContext.accessibleName=Collection Name Error Label
+UnrealScriptToolsPanel.collectionNameTextField.AccessibleContext.accessibleName=Collection Name
+UnrealScriptToolsPanel.jLabel2.AccessibleContext.accessibleName=Tool Collection Name
+UnrealScriptToolsPanel.collectionList.AccessibleContext.accessibleName=Tool Collection List
+UnrealScriptToolsPanel.jLabel1.AccessibleContext.accessibleName=Tool Collection
+UnrealScriptToolsPanel.compilerResultDirTextField.text=compilerResultDirTextField
