Global properties more or less working.

--- a/src/org/unrealscriptsupport/options/global/Bundle.properties
+++ b/src/org/unrealscriptsupport/options/global/Bundle.properties
@@ -17,7 +17,7 @@ UnrealScriptToolsPanel.collectionNameTextField.text=collectionNameTextField
 UnrealScriptToolsPanel.jLabel7.text=Executable path:
 UnrealScriptToolsPanel.executablePathTextField.text=executablePathTextField
 UnrealScriptToolsPanel.compilerFileNameTextField.text=compilerFileNameTextField
-UnrealScriptToolsPanel.nameErrorLabel.text=Duplicate name in list
+UnrealScriptToolsPanel.nameErrorLabel.text=Invalid name
 UnrealScriptToolsPanel.nameErrorLabel.AccessibleContext.accessibleName=Collection Name Error Label
 UnrealScriptToolsPanel.collectionNameTextField.AccessibleContext.accessibleName=Collection Name
 UnrealScriptToolsPanel.jLabel2.AccessibleContext.accessibleName=Tool Collection Name
