Been a while and I don't remember what I was doing

--- a/src/org/unrealscriptsupport/options/global/Bundle.properties
+++ b/src/org/unrealscriptsupport/options/global/Bundle.properties
@@ -5,7 +5,7 @@ UnrealScriptToolsPanel.addButton.text=Add
 UnrealScriptToolsPanel.removeButton.text=Remove
 UnrealScriptToolsPanel.defaultButton.text=Default
 UnrealScriptToolsPanel.jLabel1.text=Tool Collection:
-UnrealScriptToolsPanel.jLabel2.text=Tool Collection:
+UnrealScriptToolsPanel.jLabel2.text=Collection name:
 UnrealScriptToolsPanel.jPanel3.border.title=Tool Settings
 UnrealScriptToolsPanel.jLabel3.text=Base directory:
 UnrealScriptToolsPanel.jLabel4.text=Compiler file name:
