--- a/src/org/unrealscriptsupport/options/global/unrealscriptsupport.properties
+++ b/src/org/unrealscriptsupport/options/global/unrealscriptsupport.properties
@@ -1,10 +1,10 @@
-Killing\ Floor.compiler.args=make1
-Killing\ Floor.compiler.basedir=base1
-Killing\ Floor.compiler.filename=ucc1
-Killing\ Floor.compiler.resultdir=system1
-Killing\ Floor.executable.filename=kf.exe
-UDK\ 3.compiler.args=make2
-UDK\ 3.compiler.basedir=base2
-UDK\ 3.compiler.filename=ucc2
-UDK\ 3.compiler.resultdir=system2
-UDK\ 3.executable.filename=unreal.exe
+Killing\ Floor.compiler.args=make
+Killing\ Floor.compiler.basedir=C:\Program Files (x86)\Steam\steamapps\common\killingfloor
+Killing\ Floor.compiler.filename=C:\Program Files (x86)\Steam\steamapps\common\killingfloor\System\UCC.exe
+Killing\ Floor.compiler.resultdir=C:\Program Files (x86)\Steam\steamapps\common\killingfloor\System
+Killing\ Floor.executable.filename=C:\Program Files (x86)\Steam\steamapps\common\killingfloor\System\KillingFloor.exe
+UDK\ 3.compiler.args=
+UDK\ 3.compiler.basedir=C:\UDK
+UDK\ 3.compiler.filename=C:\UDK\UDK-2010-12\Binaries\Win64\UDK.exe
+UDK\ 3.compiler.resultdir=C:\UDK\UDK-2010-12\Binaries\Win64
+UDK\ 3.executable.filename=C:\UDK\UDK-2010-12\Binaries\Win64\Unreal
